--- a/src/LagoVista.XPlat.Core/Views/DeviceAccess/PairBTDeviceView.xaml
+++ b/src/LagoVista.XPlat.Core/Views/DeviceAccess/PairBTDeviceView.xaml
@@ -3,6 +3,7 @@
     xmlns:pge="clr-namespace:LagoVista.XPlat.Core;assembly=LagoVista.XPlat.Core"
     xmlns:trs="clr-namespace:LagoVista.XPlat.Core.Extensions;assembly=LagoVista.XPlat.Core"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:ctls="clr-namespace:LagoVista.XPlat.Core.Controls.Common;assembly=LagoVista.XPlat.Core"
     x:Class="LagoVista.XPlat.Core.Views.DeviceAccess.PairBTDeviceView">
     <pge:LagoVistaContentPage.MainContent>
         <Grid>
@@ -11,15 +12,10 @@
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
-            <ListView ItemsSource="{Binding ConnectedDevices}" SelectedItem="{Binding SelectedDevice, Mode=TwoWay}" Margin="20">
+            <ListView ItemsSource="{Binding ConnectedDevices}" HasUnevenRows="True" SelectedItem="{Binding SelectedDevice, Mode=TwoWay}" Margin="20">
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <ViewCell>
-                            <Grid>
-                                <Frame BackgroundColor="#FEFEFE" BorderColor="Black" HasShadow="True" HorizontalOptions="Center" Margin="0,0,0,10" WidthRequest="300" HeightRequest="30" />
-                                <Label FontSize="24" HorizontalOptions="Center" Text="{Binding DeviceName}" />
-                            </Grid>
-                        </ViewCell>
+                        <ctls:NavigationViewCell Text="{Binding DeviceName}" HasChevron="false"  Detail="{Binding DeviceId}" Icon="fa-bluetooth" />
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
