--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.UWP/Resources/EditTextStyle.xaml
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.UWP/Resources/EditTextStyle.xaml
@@ -1,14 +1,14 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style x:Key="LGVDefaultTextBoxStyle" TargetType="TextBox">
-        <Setter Property="Foreground" Value="{StaticResource EditControlText}"/>
-        <Setter Property="Background" Value="{StaticResource EditControlBackground}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource EditControlFrame}"/>
+    <Style x:Key="LGVDefaultTextBoxStyle" TargetType="TextBox" >
+        <Setter Property="Foreground" Value="{ThemeResource EditControlText}"/>
+        <Setter Property="Background" Value="{ThemeResource EditControlBackground}"/>
+        <Setter Property="BorderBrush" Value="{ThemeResource EditControlFrame}"/>
         <Setter Property="SelectionHighlightColor" Value="{ThemeResource TextControlSelectionHighlightColor}"/>
         <Setter Property="BorderThickness" Value="{ThemeResource TextControlBorderThemeThickness}"/>
-        <Setter Property="FontFamily" Value="{StaticResource EntryFont}"/>
-        <Setter Property="FontSize" Value="{StaticResource EntryFontSize}"/>
+        <Setter Property="FontFamily" Value="{ThemeResource EntryFont}"/>
+        <Setter Property="FontSize" Value="{ThemeResource EntryFontSize}"/>
         <Setter Property="ScrollViewer.HorizontalScrollMode" Value="Auto"/>
         <Setter Property="ScrollViewer.VerticalScrollMode" Value="Auto"/>
         <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Hidden"/>
@@ -16,8 +16,8 @@
         <Setter Property="ScrollViewer.IsDeferredScrollingEnabled" Value="False"/>
         <Setter Property="Padding" Value="{ThemeResource TextControlThemePadding}"/>
         <Setter Property="UseSystemFocusVisuals" Value="{ThemeResource IsApplicationFocusVisualKindReveal}"/>
-        <Setter Property="ContextFlyout" Value="{StaticResource TextControlCommandBarContextFlyout}"/>
-        <Setter Property="SelectionFlyout" Value="{StaticResource TextControlCommandBarSelectionFlyout}"/>
+        <Setter Property="ContextFlyout" Value="{ThemeResource TextControlCommandBarContextFlyout}"/>
+        <Setter Property="SelectionFlyout" Value="{ThemeResource TextControlCommandBarSelectionFlyout}"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="TextBox">
