--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.UWP/App.xaml
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.UWP/App.xaml
@@ -16,6 +16,8 @@
                 <ResourceDictionary Source="Resources/ButtonStyle.xaml" />
                 <ResourceDictionary Source="Resources/IconButtonStyle.xaml" />-->
                 <ResourceDictionary Source="Resources/FormsColors.xaml" />
+                <ResourceDictionary Source="Resources/FormsCheckboxStyle.xaml" />
+                <ResourceDictionary Source="Resources/ToggleSwitchStyle.xaml" />
                 <ResourceDictionary Source="Resources/ComboBoxStyle.xaml" />
             </ResourceDictionary.MergedDictionaries>
            </ResourceDictionary>
