--- a/src/LagoVista.XPlat.Core/Views/DeviceAccess/LiveDataView.xaml
+++ b/src/LagoVista.XPlat.Core/Views/DeviceAccess/LiveDataView.xaml
@@ -6,17 +6,29 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
         x:Class="LagoVista.XPlat.Core.Views.DeviceAccess.LiveDataView">
     <pge:LagoVistaContentPage.MainContent>
-        <flv:FlowListView FlowColumnCount="3"   
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="40" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="50" />
+            </Grid.ColumnDefinitions>
+            <Label Text="{Binding DeviceId}" />
+            <Rectangle Grid.Column="1" BackgroundColor="{Binding DeviceConnected, Converter={StaticResource RedGreenConverter}}" ></Rectangle>
+            <flv:FlowListView FlowColumnCount="3"   
                 SeparatorVisibility="Default"   
                 HasUnevenRows="True"  
+                Grid.Row="1"
                 FlowItemsSource="{Binding DataItems}">
 
-            <flv:FlowListView.FlowColumnTemplate>
-                <DataTemplate>
-                    <ctl:ComponentView Label="{Binding Label}" Name="{Binding Key}" DateStamp="{Binding LastUpdated}" Value="{Binding Value}" />
-                </DataTemplate>
-            </flv:FlowListView.FlowColumnTemplate>
-        </flv:FlowListView>
-
+                <flv:FlowListView.FlowColumnTemplate>
+                    <DataTemplate>
+                        <ctl:ComponentView Label="{Binding Label}" Name="{Binding Key}" DateStamp="{Binding LastUpdated}" Value="{Binding Value}" />
+                    </DataTemplate>
+                </flv:FlowListView.FlowColumnTemplate>
+            </flv:FlowListView>
+        </Grid>
     </pge:LagoVistaContentPage.MainContent>
-    </pge:LagoVistaContentPage>
+</pge:LagoVistaContentPage>
