--- a/src/LagoVista.XPlat.Core/Views/DeviceAccess/DFUView.xaml
+++ b/src/LagoVista.XPlat.Core/Views/DeviceAccess/DFUView.xaml
@@ -12,7 +12,8 @@
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"/>
-                <RowDefinition Height="*"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
             <StackLayout Grid.Row="1" Margin="20" IsVisible="{Binding HasServerFirmware}">
@@ -27,8 +28,18 @@
                 <ProgressBar Progress="{Binding UploadProgress}"  Margin="30,0,30,0"  HeightRequest="40" />
                 <pge:Label Text="{Binding StatusMessage}" />
 
+                <pge:Button Command="{Binding StartSerialUpdateCommand}" Text="Serial Update" WidthRequest="120" HorizontalOptions="End" Margin="0,0,30,0" />
                 <pge:Button Command="{Binding UpdateDeviceFirmwareCommand}" Text="Update" WidthRequest="120" HorizontalOptions="End" Margin="0,0,30,0" />
                 <pge:Button Command="{Binding CancelUpdateCommand}" Text="Cancel" WidthRequest="120" HorizontalOptions="End" Margin="0,0,30,0" />
+                <ListView ItemsSource="{Binding Output}" Background="Black" Margin="10">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
+                                <Label FontSize="Body" FontFamily="Consolas" TextColor="Yellow" Text="{Binding .}" />
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
             </StackLayout>
         </Grid>
     </pge:LagoVistaContentPage.MainContent>
