--- a/LagoVista.AppLoader/Views/DFUView.xaml
+++ b/LagoVista.AppLoader/Views/DFUView.xaml
@@ -1,9 +1,10 @@
-﻿<Window x:Class="LagoVista.AppLoader.Views.DFUView"
+﻿<pge:LagoVistaPage x:Class="LagoVista.AppLoader.Views.DFUView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:ctls="clr-namespace:LagoVista.AppLoader.Controls"
+        xmlns:pge="clr-namespace:LagoVista.AppLoader.Common"
         xmlns:local="clr-namespace:LagoVista.AppLoader.Views"
         mc:Ignorable="d"
         Title="DFUView" Height="450" Width="800">
@@ -25,4 +26,4 @@
             </ListBox.ItemTemplate>
         </ctls:AutoScrollListBox>
     </Grid>
-</Window>
+</pge:LagoVistaPage>
