--- a/LagoVista.AppLoader/Views/IOConfigView.xaml
+++ b/LagoVista.AppLoader/Views/IOConfigView.xaml
@@ -1,4 +1,4 @@
-﻿<pge:LagoVistaPage x:Class="LagoVista.AppLoader.Views.Splash"
+﻿<pge:LagoVistaPage x:Class="LagoVista.AppLoader.Views.IOConfigView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,14 +8,8 @@
       xmlns:local="clr-namespace:LagoVista.AppLoader.Views"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Splash">
-
+      Title="IOConfigView">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
-            <RowDefinition Height="auto" />
-        </Grid.RowDefinitions>
         
-        <Button Content="Login"  Command="{Binding LoginCommand}" Grid.Row="1" />
     </Grid>
 </pge:LagoVistaPage>
