--- a/LagoVista.AppLoader/Views/LoginPage.xaml
+++ b/LagoVista.AppLoader/Views/LoginPage.xaml
@@ -1,9 +1,10 @@
-﻿<Page x:Class="LagoVista.AppLoader.Views.LoginPage"
+﻿<pge:LagoVistaPage x:Class="LagoVista.AppLoader.Views.LoginPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:LagoVista.AppLoader.Views"
+      xmlns:pge="clr-namespace:LagoVista.AppLoader.Common"
+          xmlns:local="clr-namespace:LagoVista.AppLoader.Views"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="LoginPage">
@@ -21,8 +22,8 @@
             <ColumnDefinition Width="200" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
-        <TextBox Text="{Binding Email, Mode=TwoWay}" Grid.Row="1" Grid.Column="1"/>
+        <TextBox Text="{Binding EmailAddress, Mode=TwoWay}" Grid.Row="1" Grid.Column="1"/>
         <TextBox Text="{Binding Password, Mode=TwoWay}" Grid.Row="2" Grid.Column="1" />
         <Button Command="{Binding LoginCommand}" Content="Login" Grid.Row="3" Grid.Column="1"/>
     </Grid>
-</Page>
+</pge:LagoVistaPage>
