--- a/LagoVista.AppLoader/Views/DeviceReposView.xaml
+++ b/LagoVista.AppLoader/Views/DeviceReposView.xaml
@@ -11,7 +11,12 @@
       Title="DeviceReposView">
 
     <Grid>
-        <ListView ItemsSource="{Binding ListItems}" SelectedItem="{Binding SelectedItem, Mode=TwoWay}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="30" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <ctls:Icon IconKey="fa-gear" />
+        <ListView ItemsSource="{Binding ListItems}" Grid.Row="1" SelectedItem="{Binding SelectedItem, Mode=TwoWay}">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <TextBlock Text="{Binding Name}" />
